reimplemented ender beecon and bee traits